# verify-uv-build-action

./: .markdownlint.json  .yamllint.yaml  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  action.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: cancel-stale-queued-runs.yaml  cancel_stale_queued_runs.yaml  ci.yaml  dependency-review.yml  format.yaml  nightly-tests.yaml  test-local.yaml  test-shell.yaml  test-stable.yaml  verify-workflows.yaml
dev/package/: check_custom.sh  check_dependency_tree.sh  check_metadata.sh  check_type.sh  custom_checks.sh
scripts/: check_dependency_tree.sh  check_metadata.sh  check_type.sh  verify_sdist_extras.sh  verify_wheel_extras.sh
src/myproject/: __init__.py  module.py
tests/: package_checks.py
tests/bats/: test_check_dependency_tree.bats  test_check_metadata.bats  test_check_type.bats  test_verify_sdist_extras.bats  test_verify_wheel_extras.bats
