[build-system]
requires = ["hatchling >= 1.27"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.sdist]
only-include = ["src"]

[project]
name = "myproject"
version = "0.1.0"
description = ""
license = "BSD-3-Clause"

requires-python = ">=3.10"
dependencies = [
    "coola"
]

[project.optional-dependencies]
all = []

[dependency-groups]
dev = []

